--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,6 @@ OPENAI_API_KEY=
 # Update these with your pinecone details from your dashboard. 
 # PINECONE_INDEX_NAME is in the indexes tab under "index name" in blue
 # PINECONE_ENVIRONMENT is in indexes tab under "Environment". Example: "us-east1-gcp"
-PINECONE_API_KEY=  
-PINECONE_ENVIRONMENT=
-PINECONE_INDEX_NAME= 
+PINECONE_API_KEY=dff87370-6143-48c6-a708-876e6bf3824d  
+PINECONE_ENVIRONMENT=us-west4-gcp-free
+PINECONE_INDEX_NAME=langchainjsfundamentals 
