added afsa demo

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,7 @@ OPENAI_API_KEY=
 PINECONE_API_KEY=dff87370-6143-48c6-a708-876e6bf3824d  
 PINECONE_ENVIRONMENT=us-west4-gcp-free
 PINECONE_INDEX_NAME=langchainjsfundamentals 
+# bi group below
+PINECONE_API_KEY=dff87370-6143-48c6-a708-876e6bf3824d  
+PINECONE_ENVIRONMENT=us-west4-gcp-free
+PINECONE_INDEX_NAME=langchainjsfundamentals 
